@@ -140,7 +140,8 @@ public class JunitTestRunner {
                 testsRunning = true;
             }
             Thread.currentThread().setContextClassLoader(tcl);
-            Consumer currentTestAppConsumer = (Consumer) tcl.loadClass(CurrentTestApplication.class.getName()).newInstance();
+            Consumer currentTestAppConsumer = (Consumer) tcl.loadClass(CurrentTestApplication.class.getName())
+                    .getDeclaredConstructor().newInstance();
             currentTestAppConsumer.accept(testApplication);
 
             Set<UniqueId> allDiscoveredIds = new HashSet<>();
